--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^9.0.3",
     "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.6",
     "remark-gfm": "^4.0.1",
     "shadcn-ui": "^0.9.0",
     "typescript": "~5.9.3",
