--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "backend"
+name = "Documentation-MCP"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,7 +8,9 @@ dependencies = [
     "fastapi>=0.121.2",
     "fastmcp>=2.13.1",
     "huggingface-hub>=1.1.4",
+    "mcp>=1.21.0",
     "pyjwt>=2.10.1",
+    "python-dotenv>=1.0.0",
     "python-frontmatter>=1.1.0",
     "uvicorn[standard]>=0.38.0",
 ]
