--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ JWT_SECRET_KEY=change-me
 HF_OAUTH_CLIENT_ID=your-hf-client-id
 HF_OAUTH_CLIENT_SECRET=your-hf-client-secret
 VAULT_BASE_PATH=./data/vaults
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
+ELEVENLABS_VOICE_ID=your-elevenlabs-voice-id
+ELEVENLABS_MODEL=eleven_multilingual_v2
